--- a/customer_service/test.ipynb
+++ b/customer_service/test.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,22 +23,22 @@
     "    'phone_number': 'whatsapp:+14155238886'\n",
     "}\n",
     "\n",
-    "response = requests.post('http://127.0.0.1:9000/assistant', json=json)\n",
+    "response = requests.post('http://127.0.0.1:80/customer-agent/assistant', json=json)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get('http://127.0.0.1:2000/api2/conversations', params={'phone_number': 'whatsapp:+14155238886'})\n"
+    "response = requests.get('http://127.0.0.1:80/customer-agent/conversations', params={'phone_number': 'whatsapp:+14155238886'})\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +74,7 @@
        "   'thread_id': 'thread_ZexQr3iTMTNAxJw7mOFmcdSI'}]}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
