--- a/customer_service/test.ipynb
+++ b/customer_service/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,8 @@
     "json = {\n",
     "    'company_name': 'CompanyX',\n",
     "    'tone': 'friendly',\n",
-    "    'phone_number': 'whatsapp:+14155238886'\n",
+    "    'phone_number': 'whatsapp:+14155238886',\n",
+    "    'contact_number': '+54362139565'\n",
     "}\n",
     "\n",
     "response = requests.post('http://127.0.0.1:80/customer-agent/assistant', json=json)\n",
@@ -138,13 +139,100 @@
     "[RequiredActionFunctionToolCall(id='call_hVBnKbIQKxiu5fxDb3kXkVvb', function=Function(arguments='{\"query\": \"cortar madera\"}', name='Search'), type='function'),\n",
     " RequiredActionFunctionToolCall(id='call_Tthsr4uFqt8MzXeZfMSCogat',function=Function(arguments='{}', name='Overview'), type='function')]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post('http://127.0.0.1:5000/register', json={'company_name': 'Norte Development', 'email': 'tymkiwdylan@gmail.com', 'password': '12345678'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'company_name': 'Norte Development',\n",
+       "  'email': 'tymkiwdylan@gmail.com',\n",
+       "  'id': 1},\n",
+       " 'message': 'User registered successfully'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post('http://127.0.0.1:5000/login', json={'email': 'tymkiwdylan@gmail.com', 'password': '12345678'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token = response.json()['token']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.post('http://127.0.0.1:5000/validate', headers={'Authorization': f'Bearer {token}'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'company_name': 'Norte Development', 'user_id': 1},\n",
+       " 'message': 'Token is valid'}"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "\"Python/Mu (mu_venv-38-20230221-114721)\"",
    "language": "python",
-   "name": "python3"
+   "name": "mu_venv-38-20230221-114721"
   },
   "language_info": {
    "codemirror_mode": {
@@ -156,7 +244,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
