some payment processing in the backend

--- a/stock_service/inventory_agent/src/api/tests.ipynb
+++ b/stock_service/inventory_agent/src/api/tests.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,18 +112,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "json = {\n",
-    "    'company_name': 'El pibe',\n",
-    "    'user_id': 6,\n",
+    "    'company_name': 'El pibardo',\n",
+    "    'user_id': 3,\n",
     "    'tone': 'Friendly',\n",
     "    'custom_instructions': ''\n",
     "}\n",
     "\n",
-    "response = requests.post('http://127.0.0.1:5001/assistant', json=json)"
+    "response = requests.post('http://127.0.0.1:80/inventory-agent/assistant', json=json)"
    ]
   },
   {
@@ -188,10 +188,10 @@
    "source": [
     "json = {\n",
     "    'thread_id': 'thread_ikmS957D2z76onEFd8R3CPfc',\n",
-    "    'prompt': 'dame un csv vacio'\n",
+    "    'prompt': 'resumen del inventario por favor'\n",
     "}\n",
     "\n",
-    "response = requests.post('http://127.0.0.1:5001/prompt', json=json)"
+    "response = requests.post('http://127.0.0.1:80/inventory-agent/prompt', json=json)"
    ]
   },
   {
