back to twilio b*tch

--- a/customer_service/test.ipynb
+++ b/customer_service/test.ipynb
@@ -222,6 +222,187 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get('https://graph.facebook.com/v17.0/oauth/access_token', params={'client_id': '7233224293422160',\n",
+    "                                                                                        'client_secret': '05f9540bb3b54afac94d2440f4a844e5',\n",
+    "                                                                                        'code': \"AQCJdrYwTdQndM5YRMdfhTWXiWehkfmU8sAYQx7DTpDH_W8tWkR_HlsuWqodLQ7s0UdlCOse-iwYPiWQ30yGF_SDdGe9zGfsShhJ6zhbbm9npggkrDGWth_31oU7MLI8r3iiUTwNeIhb20mxbNl7c8IZeH4s5PVcjt7pIXBqEMtbtWWzdTMSGNupJuzdgeA_Agy9C2re6W2sIuBc-p9eRhexGeX9K9pVr87BXhiiSEd0O-3JUKe57Di7Pvlq_TmnlD1hM-za4_h0pYyD41bJAmjsRUKgeP4OO9loc56ldZsMAIbNdqqj60EZuiTTxr71zrhpo5_cddPfzdsk75ExawOAD1mDBcHuvhxq1ygvZ9kYzJVc3PvgkvpjhWuBp_rQLog\",\n",
+    "                                                                                        'grant_type': 'authorization_code',})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': {'message': 'This authorization code has expired.',\n",
+       "  'type': 'OAuthException',\n",
+       "  'code': 100,\n",
+       "  'error_subcode': 36007,\n",
+       "  'fbtrace_id': 'AiQm0USXgbQt2jDJxPwFMoI'}}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "token_response = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get('https://graph.facebook.com/v19.0/debug_token', \n",
+    "                        params={'input_token': 'EABmylESXFFABO1YmuJvezcaSEvF9NWZCIwas59PZBW2NO7dU6IZCSd80FacFa0NZCuDKTxFK46UpfwHc1I4gBjdAb8CP5ZArF226fna3ntkV9Wz3X0tS6ZCklNf1NwK88hZBTuZCNBzGm5j2g34n9br2QfZB8WAP5sU2cwzsGibtPY1SDMHPZBzR6DKOFBu8gDVnzGq0LXRwWqlt176NELS4EbYz7gzfKwRaIZCIPdEzfbi1PIzIRFrylBSVGRbhV51'},\n",
+    "                        headers={'Authorization': 'Bearer 7233224293422160|EYrEWN8vECTykxHiF7hTKj58_PQ'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': {'app_id': '7233224293422160',\n",
+       "  'type': 'SYSTEM_USER',\n",
+       "  'application': 'alicIA',\n",
+       "  'data_access_expires_at': 0,\n",
+       "  'expires_at': 0,\n",
+       "  'is_valid': True,\n",
+       "  'issued_at': 1707742028,\n",
+       "  'scopes': ['whatsapp_business_management', 'public_profile'],\n",
+       "  'granular_scopes': [{'scope': 'whatsapp_business_management',\n",
+       "    'target_ids': ['241485389044019']}],\n",
+       "  'user_id': '122096899364217908'}}"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    'Content-Type': 'application/json',\n",
+    "}\n",
+    "\n",
+    "params = {\n",
+    "    'access_token': 'EABmylESXFFABO1YmuJvezcaSEvF9NWZCIwas59PZBW2NO7dU6IZCSd80FacFa0NZCuDKTxFK46UpfwHc1I4gBjdAb8CP5ZArF226fna3ntkV9Wz3X0tS6ZCklNf1NwK88hZBTuZCNBzGm5j2g34n9br2QfZB8WAP5sU2cwzsGibtPY1SDMHPZBzR6DKOFBu8gDVnzGq0LXRwWqlt176NELS4EbYz7gzfKwRaIZCIPdEzfbi1PIzIRFrylBSVGRbhV51'\n",
+    "}\n",
+    "\n",
+    "response = requests.get(\"https://graph.facebook.com/v19.0/241485389044019/phone_numbers\", params=params, headers=headers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'verified_name': 'Tymkiw Ing.',\n",
+       "   'code_verification_status': 'VERIFIED',\n",
+       "   'display_phone_number': '+54 9 362 413-9565',\n",
+       "   'quality_rating': 'UNKNOWN',\n",
+       "   'platform_type': 'NOT_APPLICABLE',\n",
+       "   'throughput': {'level': 'NOT_APPLICABLE'},\n",
+       "   'last_onboarded_time': '2024-02-12T12:47:06+0000',\n",
+       "   'id': '243071965552180'}],\n",
+       " 'paging': {'cursors': {'before': 'QVFIUlU2QmxlU1N0SzVFeGJJS1JjUEU4OVRpMXpyQktEY3U0ZAEFvVnJIWjZABMl85ekdzVFBoTE9FdkNIVktUUzYwRkRQRWhkUkJoYXYzSDZA2eTd3aWVEcXFB',\n",
+       "   'after': 'QVFIUlU2QmxlU1N0SzVFeGJJS1JjUEU4OVRpMXpyQktEY3U0ZAEFvVnJIWjZABMl85ekdzVFBoTE9FdkNIVktUUzYwRkRQRWhkUkJoYXYzSDZA2eTd3aWVEcXFB'}}}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "headers = {\n",
+    "    'Authorization': 'Bearer EABmylESXFFABO1YmuJvezcaSEvF9NWZCIwas59PZBW2NO7dU6IZCSd80FacFa0NZCuDKTxFK46UpfwHc1I4gBjdAb8CP5ZArF226fna3ntkV9Wz3X0tS6ZCklNf1NwK88hZBTuZCNBzGm5j2g34n9br2QfZB8WAP5sU2cwzsGibtPY1SDMHPZBzR6DKOFBu8gDVnzGq0LXRwWqlt176NELS4EbYz7gzfKwRaIZCIPdEzfbi1PIzIRFrylBSVGRbhV51',\n",
+    "    'Content-Type': 'application/json',\n",
+    "}\n",
+    "\n",
+    "json_data = {\n",
+    "    'messaging_product': 'whatsapp',\n",
+    "    'to': '12073139513',\n",
+    "    'type': 'template',\n",
+    "    'template': {\n",
+    "        'name': 'hello_world',\n",
+    "        'language': {\n",
+    "            'code': 'en_US',\n",
+    "        },\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "response = requests.post('https://graph.facebook.com/v18.0/243071965552180/messages', headers=headers, json=json_data)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'error': {'message': '(#200) You do not have permission to access this field.',\n",
+       "  'type': 'OAuthException',\n",
+       "  'code': 200,\n",
+       "  'fbtrace_id': 'AS2uJwhd5d5ptLv-gDvpyz0'}}"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
