--- a/stock_service/inventory_agent/src/api/tests.ipynb
+++ b/stock_service/inventory_agent/src/api/tests.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,6 +244,134 @@
    ],
    "source": [
     "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response = requests.get('https://graph.facebook.com/v19.0/2142130792510013/system_users?access_token=EABmylESXFFABO97rZAt3x81n0XFtIfUJZAuZAy3iFdCW8fYSkYjRq1pSelwGdZB16bVZCVShRpqORGRl0n0cn32evcQQCn3lincGuF5tFNG8ZBm9EO7gtkB0fTXGDIBR51owolKgAwq71mXYsrTXWK5KS777bAQ9XcfZCE1Kw7CAdP1ESXknvuQANgr5JZBNnpOo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': [{'id': '122101535918215802',\n",
+       "   'name': 'Dylan Tymkiw',\n",
+       "   'role': 'ADMIN'}],\n",
+       " 'paging': {'cursors': {'before': 'QVFIUnc0a05sRkZAHNWpLZADFFaHV0cDZALbm4tdWxLVFoxRUs0QXdiZAnBrTWttTXZAFRFd6bmtyR1J3SFdoQkJpaVNSLS10eWZA5ejgyWC0tVm0yc0V2QWZAPclN3',\n",
+       "   'after': 'QVFIUnc0a05sRkZAHNWpLZADFFaHV0cDZALbm4tdWxLVFoxRUs0QXdiZAnBrTWttTXZAFRFd6bmtyR1J3SFdoQkJpaVNSLS10eWZA5ejgyWC0tVm0yc0V2QWZAPclN3'}}}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data': []}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = 'https://graph.facebook.com/v19.0/2142130792510013/extendedcredits'\n",
+    "params = {\n",
+    "    'fields': 'id, legal_entity_name',\n",
+    "    'access_token': 'EABmylESXFFABO97rZAt3x81n0XFtIfUJZAuZAy3iFdCW8fYSkYjRq1pSelwGdZB16bVZCVShRpqORGRl0n0cn32evcQQCn3lincGuF5tFNG8ZBm9EO7gtkB0fTXGDIBR51owolKgAwq71mXYsrTXWK5KS777bAQ9XcfZCE1Kw7CAdP1ESXknvuQANgr5JZBNnpOo'\n",
+    "}\n",
+    "\n",
+    "response = requests.get(url, params=params)\n",
+    "\n",
+    "response.json() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"success\":true}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "\n",
+    "url = 'https://graph.facebook.com/v19.0/183618341511781/register'\n",
+    "\n",
+    "headers = {\n",
+    "    'Content-Type': 'application/json',\n",
+    "    'Authorization': 'Bearer EABmylESXFFABO7lhl31dYM02wB4D1eGt5MpJWEYHJZBJ5cIYvqn0Revhedc79AxrjUA29ZAeKzFBp0AN187IJezMzVathvZCNF2X6dn54os1UtZBk6ZCCEORuMuIA54kUQ1ZBGsZBEjDU0t3ZCRruDoEhBadODNkTqmDSyag0FuMmjrvzWkHlck2q7wZCwCMxdL9gnra5fISTWsSL5a4qrU4ZD'\n",
+    "}\n",
+    "\n",
+    "data = {\n",
+    "    \"messaging_product\": \"whatsapp\",\n",
+    "    'pin': '248079'\n",
+    "}\n",
+    "\n",
+    "response = requests.post(url, headers=headers, json=data)\n",
+    "\n",
+    "print(response.text)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'success': True}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = f'https://graph.facebook.com/v19.0/241485389044019/assigned_users'\n",
+    "params = {\n",
+    "        'user': '122101535918215802',\n",
+    "        'tasks': \"['MANAGE']\",\n",
+    "        'access_token': 'EABmylESXFFABO97rZAt3x81n0XFtIfUJZAuZAy3iFdCW8fYSkYjRq1pSelwGdZB16bVZCVShRpqORGRl0n0cn32evcQQCn3lincGuF5tFNG8ZBm9EO7gtkB0fTXGDIBR51owolKgAwq71mXYsrTXWK5KS777bAQ9XcfZCE1Kw7CAdP1ESXknvuQANgr5JZBNnpOo' #TODO: Make this a system variable\n",
+    "    }\n",
+    "\n",
+    "response = requests.post(url, headers=headers, json=params)\n",
+    "\n",
+    "response.json()"
    ]
   },
   {
